--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -2,7 +2,7 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11783855.md#1" target="_blank">2020美甲趋势  复古时尚展现全新风貌</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11783855.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_790135237-320x200.jpg" align ="left"></a>妆点自己的指甲是充满趣味的一种体验，涂上美丽的指甲油，就像是帮指甲上妆一般，可以展现自己的品味与风格。下面我们将介绍2020年的美甲趋势，你可以从中选择你喜爱的造型尝试看看！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 4:01 PM	</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783428.md#1" target="_blank">预防武汉肺炎  中医4招提升正气 增强免疫力</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783428.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/wuhan-pneumonia-chinese-medicine_1586627872-150x120.jpg" align ="left"></a>武汉日前爆发的不明肺炎已判定为“新型冠状病毒”，让民众担心被传染的风险。中医4方法提升正气，增强免疫力，抵抗传染病。“正气”是指人体中正的能量，也就是抵抗病邪的源泉。好的行为、情绪和饮食，能提升人的正气。健脾补气可提升正气、抵抗病毒。如何健脾胃？在于吃的恰当，还有一些食物专补脾胃。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 10:52 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783465.md#1" target="_blank">和爸爸打拼生活 14月大男娃铲雪笑翻网友</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783465.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/GettyImages-653236048-150x120.jpg" align ="left"></a>对一个蹒跚学步的小娃儿来说，新年伊始就要这么努力地打拼，也只能大叹生活真艰苦啊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 7:17 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783158.md#1" target="_blank">牙痛好难受？按手上1神奇穴位 迅速止痛</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783158.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/toothache-acupuncture-point6_756247357-150x120.jpg" align ="left"></a>牙痛起来好难忍！赶紧掐合谷穴，就会缓解许多。为何合谷穴有这么神奇的效果？这就要从它所属的经络——手阳明大肠经说起了。掐按合谷穴，让大肠经气血畅通，牙痛就自然会缓解了。牙痛时，一手握空拳或自然放松，以另一手拇指指腹揉按合谷穴1～2分钟，以感觉到酸胀感而可以忍受为佳；然后换手再按，直至牙痛减缓。合谷穴位于手的......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 4:52 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783158.md#1" target="_blank">按手上1神奇穴位 迅速止牙痛</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783158.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/toothache-acupuncture-point6_756247357-150x120.jpg" align ="left"></a>牙痛起来好难忍！赶紧掐合谷穴，就会缓解许多。为何合谷穴有这么神奇的效果？这就要从它所属的经络——手阳明大肠经说起了。掐按合谷穴，让大肠经气血畅通，牙痛就自然会缓解了。牙痛时，一手握空拳或自然放松，以另一手拇指指腹揉按合谷穴1～2分钟，以感觉到酸胀感而可以忍受为佳；然后换手再按，直至牙痛减缓。合谷穴位于手的......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 4:52 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782368.md#1" target="_blank">汉堡也可安心吃！掌握3点自制汉堡 营养又美味</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782368.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/healthy-hamburger-homemade_644936938-150x120.jpg" align ="left"></a>快餐店中的汉堡往往热量高、营养低。自己在家能做出美味的健康汉堡。自制汉堡排不仅热量低，也是补充营养的好方式。市售汉堡排多以牛肉为主，牛绞肉油脂较少，煎起来又干又硬，因此会加入脂肪量高的猪绞肉，吃起来才会湿润多汁。自制汉堡排时可加入蘑菇等食材。可以使用一些面包的替代品，不仅减少碳水化合物的摄取，还让口味更丰足。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 2:45 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11781698.md#1" target="_blank">韩国“保母车”：2020 Kia Carnival MPV</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11781698.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20200110-Chi-Jin-Kia-Carnival-01-150x120.jpg" align ="left"></a>KIA是两大韩国汽车品牌之一，中文名叫起亚。最初的Logo设计为绿色图形符号，随后在1994年为了纪念创业50周年而改用白底红字的字母Logo，一直沿用至今。KIA不仅生产轿车、SUV，还涉及MPV领域，Carnival是KIA旗下的一款MPV八坐“保母车”，澳洲俗称people mover。Carnival MPV由.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 2:07 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11781469.md#1" target="_blank">野火灾情惨重 澳洲青年开车四处救无尾熊</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11781469.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1185446524-150x120.jpg" align ="left"></a>澳洲野火自去年9月延烧至今，已经烧掉相当于韩国那么大的林地，导致5亿只动物死亡，其中包括大量澳洲特有的可爱动物无尾熊。除了澳洲政府致力于灭火之外，当地民众也尽力救灾，其中包括弥迦（Micah）和迦勒（Caleb）这两名年轻男子。他们开车四处搜寻，试图拯救受灾的无尾熊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 1:38 PM			</td></tr>
