--- a/gb/ncid280_2.md
+++ b/gb/ncid280_2.md
@@ -25,7 +25,7 @@
 武汉市.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 12:06 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11763959.md#1" target="_blank">2020脱贫年 中共多地强制脱贫丑闻百出</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11763959.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-634360506-600x400-150x120.jpg" align ="left"></a>中共当局曾于2015年提出于“2020年实现全民脱贫”。目前到了“脱贫年”，中共各地政府纷纷出招，表示要“完成”今年的脱贫任务，甚至不惜制造悲剧以达到造假目的。舆论认为中共当局只是数字脱贫而已。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 4:04 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11763828.md#1" target="_blank">武汉爆发似SARS“不明肺炎”民众如何防范？</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11763828.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/pneumonia-010220-150x120.jpg" align ="left"></a>武汉近日爆发“不明病毒性肺炎”，民众担忧多年前夺走数百条人命的SARS（严重急性呼吸道症候群）重现。由于中共官方一向有隐瞒疫情的前科，专家建议身在疫区或近日前往当地的民众一定要做好防范。为因应武汉市的肺炎流行疫情，台湾已对武汉直航的班机进行登机检疫，希望将疫情阻绝于境外。面对不明肺炎 民众如何防范？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:29 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11770245.md#1" target="_blank">河南新野县疑发生爆炸 引发2.1级地震</a><br></h3>据中国地震台网测定，1月6日凌晨2时在河南南阳市新野县（北纬32.45度，东经112.50度）发生2.1级地震（疑爆），震源深度0千米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 3:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11763808.md#1" target="_blank">家被强拆父母冤死 男子出狱报复致1死2伤</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11763808.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/33-150x120.jpeg" align ="left"></a>新年首日，江苏仪征市刘集镇发生一起命案，凶手为曾因强拆上访坐牢的彭在林，出狱之后将村支书女儿以及当年的拆迁者2人杀伤，凶手自杀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769782.md#1" target="_blank">四川广安空货车与小客车相撞 致4人死亡</a><br></h3>1月5日下午，四川广安区广恒快速通道大龙场镇路段发生一起道路交通事故，导致4人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 8:17 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769646.md#1" target="_blank">香港怀疑武汉肺炎案至16例 最小病人2岁</a><br></h3>湖北武汉不明肺炎病例在当地暴增并延烧至香港。在过去24小时内，新增8宗曾经到武汉，返港后出现肺炎等症状的病例。怀疑个案从14例增至16例。最小的病人只有2岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 8:08 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769311.md#1" target="_blank">新年刚过 陕西连发两起杀人案 致4死1伤</a><br></h3>2020年新年刚过，陕西传出两起杀人案。1月2日，陕西西安市第66中学女教师周某娟被高三学生李某伤害致死。1月4日，汉中市宁强县，男子徐某林将王某、雷某杰杀死，将9岁女童王某彤致伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 6:19 PM							</td></tr>
