--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -1,4 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/fcjmkl2375/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fcjmkl2375/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11778044.md#1" target="_blank">【名家专栏】FBI应为滥用外国情报监视法负责</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11778044.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1078705704-1200x800-150x120.jpg" align ="left"></a>上个月，美国司法部（Department of Justice）发布了一份内部调查报告，该报告由美国司法部监察长（IG）负责，揭露了美国情报部门是如何在大选期间监视川普（特朗普）总统的一名竞选助手的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 6:32 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779125.md#1" target="_blank">朱同：没有暴徒，只有暴政</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779125.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1907070457061366-150x120.jpg" align ="left"></a>党媒撒谎是有传统的，如果报道真相了，肯定是太阳从西边出来了......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 4:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778817.md#1" target="_blank">港人心声：不想看到宝岛成为第二个香港</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778817.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1410232252212606-150x120.jpg" align ="left"></a>香港与台湾虽然隔着800公里，但一向关系密切，互动频仍。如果说香港反送中的每一波浪潮都牵动着台湾人的心，那么即将到来的台湾总统大选也同样牵动着香港人的心。16位香港青少年在芭乐留言板的留言，情真意切，诉说着反送中的港人对台湾大选的期盼，对台湾邻居的心声——“我们不想看到宝岛成为第二个香港”，“把握你们手中的神圣的选票.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 1:36 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/22/n11738121.md#1" target="_blank">【思想领袖】戴耀廷：香港抗议者的智慧（上）</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/22/n11738121.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/EET-Benny-Tai-150x120.jpg" align ="left"></a>12月1日，英文《大纪元时报》节目“美国思想领袖”（American Thought Leader）主持人杨杰凯（Jan Jekielek）赴香港进行专访。在接受采访时，香港大学法律系副教授戴耀廷表示：如果香港一些官员对香港自治和法治造成的一切损害负有其责，那么他们就应该承担责任。下面请看专访全文：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 1:05 PM			</td></tr>
@@ -22,7 +23,14 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11773235.md#1" target="_blank">【谈股论金】川普“以战止战”非长期利空</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11773235.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-509525684-600x400-1-150x120.jpg" align ="left"></a>在伊朗第二号头目卡西姆?苏莱曼尼（Qassim Soleimani）上周遭到美军无人机击毙后，全球金融市场引发不小的动荡，金价期货三天内由1,520美元/盎司一度涨到1,590美元，西德州原油也由61美元/桶最高涨到64.7美元。部分资金确实涌入黄金和原油进行避险。 然而，美股的表现却颇耐人寻味，道指除了上周五下挫23.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 7:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11772976.md#1" target="_blank">林辉：中共当年盘剥延安人 被骂很“黑”</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11772976.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/608112233521017-150x120.gif" align ="left"></a>毛在建政后足迹遍及大江南北，却没有再踏入呆了13年的延安一步，实属反常，大概也是知晓延安人对其的诅咒，而在中共洗脑下，去延安等所谓“红色圣地”顶礼膜拜的中国人，还是听听当年延安人对中共的真实想法吧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 6:22 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11772316.md#1" target="_blank">陈思敏：中共开年“抢钱” 通膨飙升民生苦</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11772316.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/02/100517083419100445-150x120.jpg" align ="left"></a>中共交通部新规，从2020年1月1日起，货车通行费计费方式，统一按轴（车型）收费，这让收费标准大幅提高，同时ETC设备监控车行，开年后车主高速过路费随即暴涨。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 8:56 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11772255.md#1" target="_blank">李中泠：武汉肺炎疫情恐遭隐瞒 国人如何自保？</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11772255.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1881582-150x120.jpg" align ="left"></a>这次疫情令人想起2003年发生萨斯，一开始是在广州等几个城市有一些病例，可是中共当局隐瞒疫情，给大爆发创造了条件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 7:04 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779632.md#1" target="_blank">振玉：炎黄巨难奇耻</a><br></h3>一片笙歌掩残杀，
+红朝魔爪碎中华。
+世风日下江河水，
+人性荒芜瀚海沙。
+华夏悲深马恩胯，
+炎黄伤重血腥枷，
+乾坤若扫幽灵后，
+谁不乘风惬晚霞？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 6:34 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11776340.md#1" target="_blank">祝君安：一剪梅?新年新气象</a><br></h3>赤匪运尽人离走
 俊杰三退
 幸登方舟
@@ -50,6 +58,5 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11773300.md#1" target="_blank">文静：并非“上面政策是好的，下面执行搞坏了”</a><br></h3>“上面政策是好的，下面执行搞坏了”这话不是自欺欺人就是看不清中共的邪恶，就此小议一下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 8:44 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11773255.md#1" target="_blank">吕锡民：建筑节能供气系统概述</a><br></h3>人们大约有90％的时间待在室内空间。建筑通风和新鲜空气供应可以改善室内空气品质，另外SBS和SARS的潜在爆发已成人们关注焦点。根据统计数据，人们吸入新鲜空气约有400ppm二氧化碳浓度，而呼出废气则具有40,000ppm二氧化碳浓度，这显示CO2是室内空间最首要减少的污染物之一。为了保持室内良好空气品质，许多国家制定.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 7:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11773166.md#1" target="_blank">项云：无视人性准则是中共党性决定的</a><br></h3>安居乐业天然拒绝暴力生活是人本性的自然追求，由此产生的丰富多彩文化和娱乐也是自然而然；由此生产和生活中发生的各种人际关系规则也必然要相互共识，普世价值也必是人性光辉体现。所以信守各种承诺也是人性自然体现。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 6:27 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11760382.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（13）</a><br></h3>我们能够认识的这个世界，比照眼睛观察到的事物，可以做这样一个描述：有一个一个可分辨出的物体，这些物体之间有一些间隙，可以插入很多同样的物体。有一定数目的相同或类似物体同时存在。一个物体一般会有可分辨的边界，边界内物质凝实，边界外没有同样物质。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 7:09 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/fcjmkl2375/djy/blob/master/gb/news392_2.md#1<br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fcjmkl2375/djy/blob/master/gb/news392_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_2.htm">http://www.epochtimes.com/gb/news392_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
