--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -6,8 +6,8 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11776083.md#1">中共央视前主持人芮成钢近况被曝光</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11770092.md#1">高速收费新系统启动 路费暴涨 民怨四起</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/4/n11768055.md#1">川普击毙伊朗二号人物 对中共释何种信号</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播】韩国瑜承认败选 蔡英文发表讲话</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11770079.md#1">冯仑被退休：退休金8千 广场舞大妈都看不起</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777903.md#1">骆惠宁称揪心 郭文贵：骆绝对心狠手辣</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785255.md#1">朱同：文斗武斗都是斗</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785090.md#1">王友群：刘鹤终于要来美国签协议了</a><br>
