--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/4/n11768055.md#1">川普击毙伊朗二号人物 对中共释何种信号</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11783658.md#1">【更新】蔡英文破817万票 民进党立委过半</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785931.md#1">海风：蔡英文连任 北京“帮了大忙”</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785255.md#1">朱同：文斗武斗都是斗</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785090.md#1">王友群：刘鹤终于要来美国签协议了</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11784686.md#1">海风：中共到底还能撑多久？</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783382.md#1">周晓辉：习近平失豪情身边聚庸才 路在哪里？</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783244.md#1">颜丹：“17人未脱贫”假在哪儿？</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783194.md#1">王友群：王立强曝光中共渗透台湾又添新证据</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783128.md#1">沁芳：“依法治国”下的强制采血</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
@@ -42,7 +42,7 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785286.md#1">蔡英文得票破800万 韩国瑜承认败选</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785259.md#1">赢吴怡农近万票 蒋万安自行宣布当选台北立委</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11783658.md#1">【更新】蔡英文破817万票 民进党立委过半</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785677.md#1">蓬佩奥贺蔡英文胜选 ：台湾再彰显民主力量</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785677.md#1">蓬佩奥贺蔡英文胜选：台湾再彰显民主力量</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785661.md#1">年轻人捍卫台湾民主 助蔡英文总统高票连任</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785604.md#1">立法院长：台湾护自由 选举结果向中共说不</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785482.md#1">2020年总统立委败选 国民党主席请辞</a><br>
