--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777903.md#1">骆惠宁称揪心 郭文贵：骆绝对心狠手辣</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11770079.md#1">冯仑被退休：退休金8千 广场舞大妈都看不起</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786081.md#1">周晓辉：台湾香港选举结果告诉习近平一件事</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785916.md#1">颜丹： 中共开“科技奖励大会”是自娱自乐</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785937.md#1">王友群：蔡英文胜选的六大原因</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785931.md#1">海风：蔡英文连任 北京“帮了大忙”</a><br>
@@ -21,27 +22,26 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11783651.md#1">【名家专栏】川普的全国讲话恰如其分</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11783854.md#1">王赫：中共政局——三病缠身 死前丧智</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783273.md#1">丹丹：关于香港“明日大屿愿景”</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783382.md#1">周晓辉：习近平失豪情身边聚庸才 路在哪里？</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/30/n11754403.md#1">天津强拆世界级别墅群 数百业主走投无路</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780385.md#1">【新闻看点】王立强爆遭威胁 台大选狂澜骤起</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11771208.md#1">李子柒背后的“中国故事”</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777957.md#1">年关难过 大陆网络公司新一波裁员潮来临</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777568.md#1">王立强遭死亡威胁 被要求撤回对中共指控</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786197.md#1">白宫：祝贺蔡总统连任 台湾是美重要伙伴</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786089.md#1">民进党总统立委双赢 学者：两大主因</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785933.md#1">美参院外委会祝贺台湾民主选举 蔡英文胜选</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786070.md#1">防堵学术间谍 美ICE加强调查国际学生</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11781491.md#1">【独家】专访郑文杰：惨痛经历 理解法轮功（六）</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785889.md#1">蔡英文连任 美媒：应感谢北京的愚蠢</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785895.md#1">伊朗导弹击中乌航客机 民众要最高领袖下台</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785895.md#1">伊朗承认导弹击中乌航客机 国际强烈谴责</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785709.md#1">陆医院“先安检后看病” 医患冲突再受关注</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785361.md#1">蔡英文连任 韩国瑜败选 中共官媒报异调</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785751.md#1">回应台湾大选 国台办重申九二共识一国两制</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11783661.md#1">【拍案惊奇】台湾大选 分享5个忠告</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785564.md#1">政坛新秀狙击资深老将 台立委选战5大惊奇</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785521.md#1">中共严控台湾大选即时消息 凤凰网下架专题</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786132.md#1">台湾大选蔡英文大胜 中共散播假新闻失败</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785859.md#1">初步协议生效后 美中将展开半年度经贸对话</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785677.md#1">蓬佩奥贺蔡英文胜选：台湾再彰显民主力量</a><br>
