--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -31,7 +31,7 @@
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786197.md#1">白宫：祝贺蔡总统连任 台湾是美重要伙伴</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786089.md#1">民进党总统立委双赢 学者：两大主因</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786089.md#1">民进党总统立委双赢 学者：有两大主因</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785933.md#1">美参院外委会祝贺台湾民主选举 蔡英文胜选</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786070.md#1">防堵学术间谍 美ICE加强调查国际学生</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11781491.md#1">【独家】专访郑文杰：惨痛经历 理解法轮功（六）</a><br>
